--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
             <div class="carousel-cell"><img src="assets/avengers.png" alt=""></div>
             <div class="carousel-cell"><img src="assets/aquaman.png" alt=""></div> 
         </div>
+        <div class="altCarousel">
+            <img src="assets/goku.png" alt="">
+        </div>
         <div class="container">
             <div class="topStory">
                 <h2>Top Story</h2>
